--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj.filters
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="源文件\semantic">
       <UniqueIdentifier>{fe65a064-ed98-4568-9f17-71ec0cd84d32}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\AST">
+      <UniqueIdentifier>{e198161b-6ea6-4e92-aee6-94f951b23837}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -39,9 +42,6 @@
     <ClInclude Include="error.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="astnode.h">
-      <Filter>头文件\parser</Filter>
-    </ClInclude>
     <ClInclude Include="exprHelper.h">
       <Filter>头文件\parser</Filter>
     </ClInclude>
@@ -51,14 +51,23 @@
     <ClInclude Include="position.h">
       <Filter>头文件\parser</Filter>
     </ClInclude>
-    <ClInclude Include="visitor.h">
-      <Filter>头文件\semantic</Filter>
-    </ClInclude>
     <ClInclude Include="symbolTable.h">
       <Filter>头文件\semantic</Filter>
     </ClInclude>
     <ClInclude Include="semanticChecker.h">
       <Filter>头文件\semantic</Filter>
+    </ClInclude>
+    <ClInclude Include="symbol.h">
+      <Filter>头文件\semantic</Filter>
+    </ClInclude>
+    <ClInclude Include="scope.h">
+      <Filter>头文件\semantic</Filter>
+    </ClInclude>
+    <ClInclude Include="astnode.h">
+      <Filter>头文件\AST</Filter>
+    </ClInclude>
+    <ClInclude Include="visitor.h">
+      <Filter>头文件\AST</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -71,9 +80,6 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="astnode.cpp">
-      <Filter>源文件\parser</Filter>
-    </ClCompile>
     <ClCompile Include="parser.cpp">
       <Filter>源文件\parser</Filter>
     </ClCompile>
@@ -81,6 +87,9 @@
       <Filter>源文件\semantic</Filter>
     </ClCompile>
     <ClCompile Include="semanticChecker.cpp">
+      <Filter>源文件\semantic</Filter>
+    </ClCompile>
+    <ClCompile Include="symbol.cpp">
       <Filter>源文件\semantic</Filter>
     </ClCompile>
   </ItemGroup>
