SymbolTable is nearly done.

--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="lexer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="parser.cpp" />
+    <ClCompile Include="scope.cpp" />
     <ClCompile Include="semanticChecker.cpp" />
     <ClCompile Include="symbol.cpp" />
     <ClCompile Include="symbolTable.cpp" />
