--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj.filters
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClCompile Include="symbol.cpp">
       <Filter>源文件\semantic</Filter>
     </ClCompile>
+    <ClCompile Include="scope.cpp">
+      <Filter>源文件\semantic</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
