--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj.filters
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj.filters
@@ -69,6 +69,12 @@
     <ClInclude Include="visitor.h">
       <Filter>头文件\AST</Filter>
     </ClInclude>
+    <ClInclude Include="utility.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="environment.h">
+      <Filter>头文件\semantic</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="token.cpp">
@@ -93,6 +99,9 @@
       <Filter>源文件\semantic</Filter>
     </ClCompile>
     <ClCompile Include="scope.cpp">
+      <Filter>源文件\semantic</Filter>
+    </ClCompile>
+    <ClCompile Include="environment.cpp">
       <Filter>源文件\semantic</Filter>
     </ClCompile>
   </ItemGroup>
