--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj
@@ -120,6 +120,7 @@
     <ClInclude Include="error.h" />
     <ClInclude Include="exprHelper.h" />
     <ClInclude Include="lexer.h" />
+    <ClInclude Include="MxComplier.h" />
     <ClInclude Include="parser.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="position.h" />
@@ -128,13 +129,13 @@
     <ClInclude Include="symbol.h" />
     <ClInclude Include="symbolTable.h" />
     <ClInclude Include="token.h" />
-    <ClInclude Include="utility.h" />
     <ClInclude Include="visitor.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="environment.cpp" />
     <ClCompile Include="lexer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MxComplier.cpp" />
     <ClCompile Include="parser.cpp" />
     <ClCompile Include="scope.cpp" />
     <ClCompile Include="semanticChecker.cpp" />
