It complies. Change the pointers in token.h into shared_ptr. It can finish building AST correctlt for a simple case now. Breaks down when building symbol table.

--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="code.txt" />
+    <Text Include="log.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
