--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj.filters
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj.filters
@@ -112,5 +112,8 @@
     <Text Include="code.txt">
       <Filter>资源文件</Filter>
     </Text>
+    <Text Include="log.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
