--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj
@@ -116,9 +116,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="astnode.h" />
+    <ClInclude Include="ClassDeclVisitor.h" />
     <ClInclude Include="environment.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="exprHelper.h" />
+    <ClInclude Include="GlobalFuncAndClsDecl.h" />
     <ClInclude Include="lexer.h" />
     <ClInclude Include="MxComplier.h" />
     <ClInclude Include="parser.h" />
@@ -129,10 +131,13 @@
     <ClInclude Include="symbol.h" />
     <ClInclude Include="symbolTable.h" />
     <ClInclude Include="token.h" />
+    <ClInclude Include="utility.h" />
     <ClInclude Include="visitor.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ClassDeclVisitor.cpp" />
     <ClCompile Include="environment.cpp" />
+    <ClCompile Include="GlobalFuncDeclVistor.cpp" />
     <ClCompile Include="lexer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MxComplier.cpp" />
