--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj
@@ -116,11 +116,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="astnode.h" />
+    <ClInclude Include="basicblock.h" />
     <ClInclude Include="ClassDeclVisitor.h" />
+    <ClInclude Include="ControlFlowGraph.h" />
     <ClInclude Include="environment.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="exprHelper.h" />
     <ClInclude Include="GlobalFuncAndClsDecl.h" />
+    <ClInclude Include="IR.h" />
+    <ClInclude Include="IRinstruction.h" />
+    <ClInclude Include="IR_Generator.h" />
     <ClInclude Include="lexer.h" />
     <ClInclude Include="MxComplier.h" />
     <ClInclude Include="parser.h" />
@@ -128,12 +133,16 @@
     <ClInclude Include="position.h" />
     <ClInclude Include="scope.h" />
     <ClInclude Include="semanticChecker.h" />
+    <ClInclude Include="StaticString.h" />
     <ClInclude Include="symbol.h" />
     <ClInclude Include="symbolTable.h" />
     <ClInclude Include="test.h" />
+    <ClInclude Include="ThreeAddressCode.h" />
     <ClInclude Include="token.h" />
     <ClInclude Include="utility.h" />
     <ClInclude Include="visitor.h" />
+    <ClInclude Include="Function.h" />
+    <ClInclude Include="GlobalVar.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ClassDeclVisitor.cpp" />
