--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj
@@ -118,7 +118,6 @@
     <ClInclude Include="astnode.h" />
     <ClInclude Include="basicblock.h" />
     <ClInclude Include="ClassDeclVisitor.h" />
-    <ClInclude Include="ControlFlowGraph.h" />
     <ClInclude Include="environment.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="exprHelper.h" />
@@ -133,21 +132,22 @@
     <ClInclude Include="position.h" />
     <ClInclude Include="scope.h" />
     <ClInclude Include="semanticChecker.h" />
-    <ClInclude Include="StaticString.h" />
     <ClInclude Include="symbol.h" />
     <ClInclude Include="symbolTable.h" />
     <ClInclude Include="test.h" />
-    <ClInclude Include="ThreeAddressCode.h" />
+    <ClInclude Include="Operand.h" />
     <ClInclude Include="token.h" />
-    <ClInclude Include="utility.h" />
     <ClInclude Include="visitor.h" />
     <ClInclude Include="Function.h" />
     <ClInclude Include="GlobalVar.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="basicblock.cpp" />
     <ClCompile Include="ClassDeclVisitor.cpp" />
     <ClCompile Include="environment.cpp" />
     <ClCompile Include="GlobalFuncDeclVistor.cpp" />
+    <ClCompile Include="IR.cpp" />
+    <ClCompile Include="IR_Generator.cpp" />
     <ClCompile Include="lexer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MxComplier.cpp" />
