--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj.filters
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj.filters
@@ -55,6 +55,9 @@
     <Filter Include="源文件\backend\optimize">
       <UniqueIdentifier>{705da797-45e1-40f7-8f33-7a25d7bee28f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\IR\IRprinter">
+      <UniqueIdentifier>{36eddb88-c5da-4ac2-becc-af3248e7283b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -144,6 +147,12 @@
     <ClInclude Include="cfg_pass.h">
       <Filter>头文件\backend\optimize</Filter>
     </ClInclude>
+    <ClInclude Include="dominance.h">
+      <Filter>头文件\backend\optimize</Filter>
+    </ClInclude>
+    <ClInclude Include="ir_printer.h">
+      <Filter>头文件\IR\IRprinter</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lexer.cpp">
@@ -208,6 +217,9 @@
     </ClCompile>
     <ClCompile Include="IRinstruction.cpp">
       <Filter>源文件\IR</Filter>
+    </ClCompile>
+    <ClCompile Include="dominance.cpp">
+      <Filter>源文件\backend\optimize</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
