fixed some ancient bugs

--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj
@@ -172,6 +172,9 @@
     <ClCompile Include="symbolTable.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="log.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
