A bug in the construction of dominator tree is fixed. IR printer is finished and it works on simple cases, but there must be countless bugs. A big progress though.

--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="IR.cpp" />
     <ClCompile Include="IRinstruction.cpp" />
     <ClCompile Include="IR_Generator.cpp" />
+    <ClCompile Include="ir_printer.cpp" />
     <ClCompile Include="lexer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MxCompiler.cpp" />
